updated git links

--- a/index.html
+++ b/index.html
@@ -15,20 +15,19 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <!-- <a id="logo-container" class="brand-logo"></a> -->
       <div class="masthead">
         <ul class="right hide-on-med-and-down">
-          <li><a href="#welcome">Home</a></li>
-          <li><a href="#about">about</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
+          <li><a href="#github">Github Links</a></li>
           <li><a href="#languages">Languages</a></li>
           <li><a href="#contact">Contact</a></li>  
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">about</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
+          <li><a href="#github">Github Links</a></li>
           <li><a href="#languages">Languages</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -97,7 +96,7 @@
             </a>
           </div>
           <div class="center">
-            <a href="https://project-trippin.herokuapp.com/index.html">
+            <a href="https://devour-that-burger-app.herokuapp.com/">
               <h6 class="center">Burger Time</h6>
               <img src="images/projects/burgertime.png">
             </a>
@@ -106,13 +105,13 @@
 
         <div class="col s12 m4">
           <div class="center">
-            <a href="https://project-trippin.herokuapp.com/index.html">
+            <a href="https://dashboard.heroku.com/apps/levelupworkout">
               <h6 class="center">Level Up Workout</h6>
               <img src="images/projects/workout.png">
             </a>
           </div>
           <div class="center">
-            <a href="https://project-trippin.herokuapp.com/index.html">
+            <a href="https://app-friend-finde.herokuapp.com/">
               <h6 class="center">Friend Finder</h6>
               <img src="images/projects/friendfinder.png">
             </a>
@@ -121,18 +120,90 @@
 
         <div class="col s12 m4">
           <div class="center">
-            <h6 class="center">Trippin</h6>
-            <img src="images/projects/trippin.png" href="https://project-trippin.herokuapp.com/index.html">
+            <a href="https://logankeyes1212.github.io/TrainTime/">
+              <h6 class="center">Train Time</h6>
+              <img src="images/projects/train.png">
+            </a>
           </div>
           <div class="center">
-            <h6 class="center">Trippin</h6>
-            <img src="images/projects/trippin.png" href="https://project-trippin.herokuapp.com/index.html">
+            <a href="https://logankeyes1212.github.io/gifTastic/">
+              <h6 class="center">Animal Gif Search</h6>
+              <img src="images/projects/gif.png">
+            </a>
           </div>
         </div>
+
       </div>
     </div>
   </div>
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="images/background/1.jpg" alt="Unsplashed background img 2"></div>
   </div>
+  <!-- github -->
+
+
+  <div class="container" id="github">
+    <div class="section">
+      <div class="row">
+        <h4 class="center">Github Links</h4>
+
+        <div class="col s12 m4">
+          <div class="center">
+            <a href="https://github.com/JoshVanOverbeke/Project1">
+              <h6>Trippin</h6>
+              <img src="images/github/Screen Shot 2019-03-31 at 8.16.39 PM.png">
+            </a>
+          </div>
+          <div class="center">
+            <a href="https://github.com/logankeyes1212/Bamazon">
+              <h6 class="center">Node Bamazon</h6>
+              <img src="images/github/Screen Shot 2019-03-31 at 8.16.45 PM.png">
+            </a>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="center">
+            <a href="https://github.com/logankeyes1212/Project2">
+              <h6 class="center">Level Up Workout</h6>
+              <img src="images/github/Screen Shot 2019-03-31 at 8.17.46 PM.png">
+            </a>
+          </div>
+          <div class="center">
+            <a href="https://github.com/logankeyes1212/friendFinder">
+              <h6 class="center">Friend Finder</h6>
+              <img src="images/github/Screen Shot 2019-03-31 at 8.16.39 PM.png">
+            </a>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="center">
+            <a href="https://github.com/logankeyes1212/liri-node-app">
+              <h6 class="center">Liri Node App</h6>
+              <img src="images/github/Screen Shot 2019-03-31 at 8.17.46 PM.png">
+            </a>
+          </div>
+          <div class="center">
+            <a href="https://github.com/logankeyes1212/burger">
+              <h6 class="center">Burger Time</h6>
+              <img src="images/github/Screen Shot 2019-03-31 at 8.16.39 PM.png">
+            </a>
+          </div>
+        </div>
+        
+
+
+      </div>
+    </div>
+  </div>
+  
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
@@ -141,7 +212,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="images/background/1.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="images/background/truck.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container" id="languages">
