--- a/index.html
+++ b/index.html
@@ -275,14 +275,14 @@
       <div class="row">
         <h4 class="center">Contact Information</h4>
 
-        <div class="col s12 m4">
+        <div class="col s12 m3">
           <div class="center">
             <h5 class="bold">Email</h5>
             <p>LoganKeyes@yahoo.com</p>
           </div>
         </div>
 
-        <div class="col s12 m4">
+        <div class="col s12 m3">
           <div class="center">
             <h5 class="bold">Address</h5>
             <p>8817 Green Haven Dr,</p>
@@ -291,12 +291,23 @@
           </div>
         </div>
 
-        <div class="col s12 m4">
+        <div class="col s12 m3">
           <div class="center">
             <h5 class="bold">Phone Number</h5>
             <p>651-815-5398</p>
           </div>
         </div>
+
+        <div class="col s12 m3">
+          <div class="center">
+            <h5 class="bold">Resume</h5>
+            <a href="resume/Resume (2).pdf">
+            <p>Link to resume</p>
+          </a>
+          </div>
+        </div>
+
+
       </div>
     </div>
   </div>
