--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <div class="col s12 m4">
           <div class="center">
-            <a href="https://dashboard.heroku.com/apps/levelupworkout">
+            <a href="https://levelupworkout.herokuapp.com/">
               <h6 class="center">Level Up Workout</h6>
               <img src="images/projects/workout.png">
             </a>
