--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <div class="col s12 m3">
           <div class="center">
             <h5 class="bold">Resume</h5>
-            <a href="resume/Resume (2).pdf">
+            <a href="resume/resume.pdf">
             <p>Link to resume</p>
           </a>
           </div>
