--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
               Starting in 2010 at Buerkle as a part-time night janitor, within 2 months I was working full time on the
               floor helping out clients and selling services. After a few years of exceeding my service sales and
               client retention quotas, I was promoted to service manager at Buerkle Acura.</p>
-            <p class="light"> After many years at Buerkle and testing myself as a general manager at Donnybrooke
-              Motorsports, I have decided to change fields into something I have always been interested in. I am
-              currently attending a software development course at the University of Minnesota. I am hopeful to make a
+            <p class="light"> After many years as a service manager at Buerkle and testing myself as a general manager at Donnybrooke
+              Motorsports, I have decided to change fields into something I have always been passionate about. I am
+              a recent graduate from University of Minnesota Full-Stack Web Development bootcamp. I am hopeful to make a
               career out of something I enjoy to do.</p>
           </div>
         </div>
