--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               <ul>
                 <li>Javascript</li>
                 <li>jQuery</li>
-                <li>Handlebars</li>
+                <li>RESTful API</li>
                 <li>React</li>
                 <li>Java</li>
               </ul>
@@ -301,7 +301,7 @@
         <div class="col s12 m3">
           <div class="center">
             <h5 class="bold">Resume</h5>
-            <a href="resume/LoganResume.pdf">
+            <a href="resume/LoganKeyesResume.pdf">
             <p>Link to resume</p>
           </a>
           </div>
