added github and linkedin

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li><a href="#projects">Projects</a></li>
           <li><a href="#github">Github Links</a></li>
           <li><a href="#languages">Languages</a></li>
-          <li><a href="#contact">Contact</a></li>  
+          <li><a href="#contact">Contact</a></li>
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
@@ -64,9 +64,11 @@
               Starting in 2010 at Buerkle as a part-time night janitor, within 2 months I was working full time on the
               floor helping out clients and selling services. After a few years of exceeding my service sales and
               client retention quotas, I was promoted to service manager at Buerkle Acura.</p>
-            <p class="light"> After many years as a service manager at Buerkle and testing myself as a general manager at Donnybrooke
+            <p class="light"> After many years as a service manager at Buerkle and testing myself as a general manager
+              at Donnybrooke
               Motorsports, I have decided to change fields into something I have always been passionate about. I am
-              a recent graduate from University of Minnesota Full-Stack Web Development bootcamp. I am hopeful to make a
+              a recent graduate from University of Minnesota Full-Stack Web Development bootcamp. I am hopeful to make
+              a
               career out of something I enjoy to do.</p>
           </div>
         </div>
@@ -197,13 +199,13 @@
             </a>
           </div>
         </div>
-        
+
 
 
       </div>
     </div>
   </div>
-  
+
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
@@ -216,59 +218,59 @@
   </div>
 
   <div class="container" id="languages">
-      <div class="section">
-        <div class="row">
-          <h4 class="center">Coding Languages</h4>
-  
-          <div class="col s12 m4">
-            <div class="center">
-              <ul>
-                <li>Javascript</li>
-                <li>jQuery</li>
-                <li>RESTful API</li>
-                <li>React</li>
-                <li>Java</li>
-              </ul>
-            </div>
+    <div class="section">
+      <div class="row">
+        <h4 class="center">Coding Languages</h4>
+
+        <div class="col s12 m4">
+          <div class="center">
+            <ul>
+              <li>Javascript</li>
+              <li>jQuery</li>
+              <li>RESTful API</li>
+              <li>React</li>
+              <li>Java</li>
+            </ul>
           </div>
-  
-          <div class="col s12 m4">
-            <div class="center">
-                <ul>
-                    <li>HTML5</li>
-                    <li>CSS</li>
-                    <li>Materialize</li>
-                    <li>Bootstrap</li>
-                    <li>Node.js</li>
-                  </ul>
-            </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="center">
+            <ul>
+              <li>HTML5</li>
+              <li>CSS</li>
+              <li>Materialize</li>
+              <li>Bootstrap</li>
+              <li>Node.js</li>
+            </ul>
           </div>
-  
-          <div class="col s12 m4">
-            <div class="center">
-                <ul>
-                    <li>Express</li>
-                    <li>Sequelize</li>
-                    <li>MySQL</li>
-                    <li>MongoDB</li>
-                    <li>Github</li>
-                  </ul>
-            </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="center">
+            <ul>
+              <li>Express</li>
+              <li>Sequelize</li>
+              <li>MySQL</li>
+              <li>MongoDB</li>
+              <li>Github</li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
 
-    <div class="parallax-container valign-wrapper">
-        <div class="section no-pad-bot">
-          <div class="container">
-           
-          </div>
-        </div>
-        <div class="parallax"><img src="images/background/apple.jpg" alt="Unsplashed background img 3"></div>
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+
       </div>
-  
+    </div>
+    <div class="parallax"><img src="images/background/apple.jpg" alt="Unsplashed background img 3"></div>
+  </div>
+
   <!-- contact info -->
   <div class="container" id="contact">
     <div class="section">
@@ -301,9 +303,17 @@
         <div class="col s12 m3">
           <div class="center">
             <h5 class="bold">Resume</h5>
-            <a href="resume/LoganKeyesResume.pdf">
-            <p>Link to resume</p>
-          </a>
+            <a href="resume/LoganKeyes.pdf">
+              <p>Link to resume</p>
+            </a>
+            <h5 class="bold">LinkedIn</h5>
+            <a href="https://www.linkedin.com/in/logan-k-39b4a4178/">
+              <p>Link to LinkedIn</p>
+            </a>
+            <h5 class="bold">Github</h5>
+            <a href="https://github.com/logankeyes1212?tab=repositories">
+              <p>Link to Github</p>
+            </a>
           </div>
         </div>
 
