--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <div class="col s12 m3">
           <div class="center">
             <h5 class="bold">Resume</h5>
-            <a href="resume/LoganKeyes.pdf">
+            <a href="resume/LoganKeyesResume.pdf">
               <p>Link to resume</p>
             </a>
             <h5 class="bold">LinkedIn</h5>
