--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <nav class="white" role="navigation">
+  <nav class="blue" role="navigation">
     <div class="nav-wrapper container">
       <div class="masthead">
         <ul class="right hide-on-med-and-down">
@@ -44,6 +44,7 @@
         <div class="row center">
           <h5 class="header col s12 light">My name is Logan Keyes, I am a full-stack web developer and this is my
             portfolio.</h5>
+          <img src="images/logo/UMN.png" style="width: 25%; height: 25%;" />
         </div>
         <br><br>
       </div>
@@ -65,11 +66,12 @@
               floor helping out clients and selling services. After a few years of exceeding my service sales and
               client retention quotas, I was promoted to service manager at Buerkle Acura.</p>
             <p class="light"> After many years as a service manager at Buerkle and testing myself as a general manager
-              at Donnybrooke
-              Motorsports, I have decided to change fields into something I have always been passionate about. I am
-              a recent graduate from University of Minnesota Full-Stack Web Development bootcamp. I am hopeful to make
-              a
-              career out of something I enjoy to do.</p>
+              at Donnybrooke Motorsports, I have decided to change fields into something I have always been passionate
+              about. I am
+              a graduate from University of Minnesota Full-Stack Web Development course. After graduation I received my
+              first
+              my first tech industry position working for Toppan Merrill as a Web Content Specialist. The past year with Toppan
+              Merrill has been great! I am now looking for the next chapter in my developer career. </p>
           </div>
         </div>
       </div>
@@ -91,46 +93,46 @@
         <h4 class="center">Projects</h4>
 
         <div class="col s12 m4">
-          <div class="center">
+          <div class="center" id="zoom">
             <a href="https://project-trippin.herokuapp.com/index.html">
               <h6>Trippin</h6>
-              <img src="images/projects/trippin.png">
+              <img src="images/projects/trippin.png" class="projects">
             </a>
           </div>
-          <div class="center">
+          <div class="center" id="zoom">
             <a href="https://devour-that-burger-app.herokuapp.com/">
               <h6 class="center">Burger Time</h6>
-              <img src="images/projects/burgertime.png">
+              <img src="images/projects/burgertime.png" class="projects">
             </a>
           </div>
         </div>
 
         <div class="col s12 m4">
-          <div class="center">
+          <div class="center" id="zoom">
             <a href="https://levelupworkout.herokuapp.com/">
               <h6 class="center">Level Up Workout</h6>
-              <img src="images/projects/workout.png">
+              <img src="images/projects/workout.png" class="projects">
             </a>
           </div>
-          <div class="center">
+          <div class="center" id="zoom">
             <a href="https://app-friend-finde.herokuapp.com/">
               <h6 class="center">Friend Finder</h6>
-              <img src="images/projects/friendfinder.png">
+              <img src="images/projects/friendfinder.png" class="projects">
             </a>
           </div>
         </div>
 
         <div class="col s12 m4">
-          <div class="center">
+          <div class="center" id="zoom">
             <a href="https://logankeyes1212.github.io/TrainTime/">
               <h6 class="center">Train Time</h6>
-              <img src="images/projects/train.png">
+              <img src="images/projects/train.png" class="projects">
             </a>
           </div>
-          <div class="center">
+          <div class="center" id="zoom">
             <a href="https://logankeyes1212.github.io/gifTastic/">
               <h6 class="center">Animal Gif Search</h6>
-              <img src="images/projects/gif.png">
+              <img src="images/projects/gif.png" class="projects">
             </a>
           </div>
         </div>
@@ -156,46 +158,46 @@
         <h4 class="center">Github Links</h4>
 
         <div class="col s12 m4">
-          <div class="center">
+          <div class="center" id="zoom">
             <a href="https://github.com/JoshVanOverbeke/Project1">
               <h6>Trippin</h6>
-              <img src="images/github/Screen Shot 2019-03-31 at 8.16.39 PM.png">
+              <img src="images/github/Screen Shot 2019-03-31 at 8.16.39 PM.png" class="projects">
             </a>
           </div>
-          <div class="center">
+          <div class="center" id="zoom">
             <a href="https://github.com/logankeyes1212/Bamazon">
               <h6 class="center">Node Bamazon</h6>
-              <img src="images/github/Screen Shot 2019-03-31 at 8.16.45 PM.png">
+              <img src="images/github/Screen Shot 2019-03-31 at 8.16.45 PM.png" class="projects">
             </a>
           </div>
         </div>
 
         <div class="col s12 m4">
-          <div class="center">
+          <div class="center" id="zoom">
             <a href="https://github.com/logankeyes1212/Project2">
               <h6 class="center">Level Up Workout</h6>
-              <img src="images/github/Screen Shot 2019-03-31 at 8.17.46 PM.png">
+              <img src="images/github/Screen Shot 2019-03-31 at 8.17.46 PM.png" class="projects">
             </a>
           </div>
-          <div class="center">
+          <div class="center" id="zoom">
             <a href="https://github.com/logankeyes1212/friendFinder">
               <h6 class="center">Friend Finder</h6>
-              <img src="images/github/Screen Shot 2019-03-31 at 8.16.39 PM.png">
+              <img src="images/github/Screen Shot 2019-03-31 at 8.16.39 PM.png" class="projects">
             </a>
           </div>
         </div>
 
         <div class="col s12 m4">
-          <div class="center">
+          <div class="center" id="zoom">
             <a href="https://github.com/logankeyes1212/liri-node-app">
               <h6 class="center">Liri Node App</h6>
-              <img src="images/github/Screen Shot 2019-03-31 at 8.17.46 PM.png">
+              <img src="images/github/Screen Shot 2019-03-31 at 8.17.46 PM.png" class="projects">
             </a>
           </div>
-          <div class="center">
+          <div class="center" id="zoom">
             <a href="https://github.com/logankeyes1212/burger">
               <h6 class="center">Burger Time</h6>
-              <img src="images/github/Screen Shot 2019-03-31 at 8.16.39 PM.png">
+              <img src="images/github/Screen Shot 2019-03-31 at 8.16.39 PM.png" class="projects">
             </a>
           </div>
         </div>
@@ -304,15 +306,15 @@
           <div class="center">
             <h5 class="bold">Resume</h5>
             <a href="resume/LoganKeyesResume.pdf">
-              <p>Link to resume</p>
+              <p id="zoom">Link to resume</p>
             </a>
             <h5 class="bold">LinkedIn</h5>
             <a href="https://www.linkedin.com/in/logan-k-39b4a4178/">
-              <p>Link to LinkedIn</p>
+              <p id="zoom">Link to LinkedIn</p>
             </a>
             <h5 class="bold">Github</h5>
             <a href="https://github.com/logankeyes1212?tab=repositories">
-              <p>Link to Github</p>
+              <p id="zoom">Link to Github</p>
             </a>
           </div>
         </div>
@@ -334,7 +336,7 @@
     </div>
     <div class="parallax"><img src="images/background/montana.jpeg" alt="Unsplashed background img 3"></div>
   </div>
-  <footer class="page-footer teal">
+  <footer class="page-footer blue">
     <div class="footer-copyright">
       <div class="container center">
         Made by Logan Keyes</a>
