--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <div class="col s12 m3">
           <div class="center">
             <h5 class="bold">Resume</h5>
-            <a href="resume/LoganKeyesResume.pdf">
+            <a href="resume/LoganKeyesUpdate.pdf">
               <p id="zoom">Link to resume</p>
             </a>
             <h5 class="bold">LinkedIn</h5>
